<resources>
    <string name="app_name">ContactManager</string>
    <string name="hint_name">Name</string>
    <string name="hint_occupation">Occupation</string>
    <string name="todo">TODO</string>
    <string name="save_button">SAVE</string>
    <string name="delete_all_button">Delete All</string>
    <string name="update_button">UPDATE</string>
    <string name="delete_button">DELETE</string>
    <string name="empty">Empty Value</string>
</resources>